fix title gap

--- a/yorg-wiki/pages/pages.css
+++ b/yorg-wiki/pages/pages.css
@@ -17,7 +17,7 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 6px;
     text-align: center;
 }
 
