--- a/yorg-wiki/src/assets/css/app.css
+++ b/yorg-wiki/src/assets/css/app.css
@@ -17,7 +17,7 @@ body {
 header {
     background-color: #333;
     color: #d4d4d4;
-    padding: 20px;
+    padding: 6px;
     text-align: center;
 }
 
